--- a/HomeHero/Views/HeroViews/RecoverChangePW.cshtml
+++ b/HomeHero/Views/HeroViews/RecoverChangePW.cshtml
@@ -1,7 +1,13 @@
 ﻿@{
     ViewData["Title"] = "Recuperacion";
 }
+@section logo{
+    <a class=" img-container " asp-area="" asp-controller="Home" asp-action="Index"><img class="img-fluid" src="~/Images/mainIcon.png" /></a>
+}
 @section scripts{}
+
+@section inicioLI{
+}
 @section Main{
     <section class="darkMain">
         <div class="container text-white">
