--- a/HomeHero/Views/HeroViews/SignUp.cshtml
+++ b/HomeHero/Views/HeroViews/SignUp.cshtml
@@ -36,7 +36,7 @@
                             </div>
                             <div class="form-group">
                                 <label for="password" class="control-label">CONTRASEÑA</label>
-                                <input required type="password" id="password" name="password" pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$" title="Debe contener al menos 8 caracteres, incluyendo al menos 1 letra y 1 número." class="form-control" />
+                              <input required type="password" id="password" name="password" pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d@@$!%*#?&-_]{8,}$" title="Debe contener al menos 8 caracteres, incluyendo al menos 1 letra y 1 número." class="form-control" />
 
                             </div>
                             <div class="form-group">
