--- a/HomeHero/Views/Users/Delete.cshtml
+++ b/HomeHero/Views/Users/Delete.cshtml
@@ -11,7 +11,7 @@
 @section inicioLI{
     @if (User.IsInRole("Admon"))
     {
-        <li class="nav-item logIn ">
+        <li class="nav-item admin ">
             <a class="nav-link " asp-area="" asp-controller="Users" asp-action="">AdminSecret</a>
         </li>
         <li class="nav-item logIn ">
