--- a/HomeHero/Views/HeroViews/ManageRequest.cshtml
+++ b/HomeHero/Views/HeroViews/ManageRequest.cshtml
@@ -22,61 +22,98 @@
         <div class="container text-white">
             <div class="row d-flex justify-content-evenly align-items-start p-4 mt-3 thirdBg">
                 <h1 class="font-title col-12 pb-2 text-center" style="font-size: 2em;">Gestionar Solicitudes</h1>
-                <div class="p-0">
+
+
+                @if (ViewBag.active == 1)
+                {
+
                     <ul class="nav nav-tabs p-0 border-0">
-                        @if (ViewBag.active == 1)
-                        {
-                            <li class="nav-item bgTabs">
-                                <a class="nav-link active" onclick="location.href='@Url.Action("ManageRequest", "Home",new {activeTab = 1})'">Pendientes</a>
-                            </li>
-                            <li class="nav-item bgTabs">
-                                <a class="nav-link " onclick="location.href='@Url.Action("ManageRequest", "Home",new {activeTab = 2})'">En Progreso</a>
-                            </li>
-                            <li class="nav-item bgTabs">
-                                <a class="nav-link" onclick="location.href='@Url.Action("ManageRequest", "Home",new {activeTab = 3})'">Finalizado</a>
-                            </li>
-                        }
-                        else if (ViewBag.active == 2)
-                        {
-                            <li class="nav-item bgTabs">
-                                <a class="nav-link" onclick="location.href='@Url.Action("ManageRequest", "Home",new {activeTab = 1})'">Pendientes</a>
-                            </li>
-                            <li class="nav-item bgTabs">
-                                <a class="nav-link active" onclick="location.href='@Url.Action("ManageRequest", "Home",new {activeTab = 2})'">En Progreso</a>
-                            </li>
-                            <li class="nav-item bgTabs">
-                                <a class="nav-link" onclick="location.href='@Url.Action("ManageRequest", "Home",new {activeTab = 3})'">Finalizado</a>
-                            </li>
-                        }
-                        else if (ViewBag.active == 3)
-                        {
-                            <li class="nav-item bgTabs">
-                                <a class="nav-link" onclick="location.href='@Url.Action("ManageRequest", "Home",new {activeTab = 1})'">Pendientes</a>
-                            </li>
-                            <li class="nav-item bgTabs">
-                                <a class="nav-link" onclick="location.href='@Url.Action("ManageRequest", "Home",new {activeTab = 2})'">En Progreso</a>
-                            </li>
-                            <li class="nav-item bgTabs">
-                                <a class="nav-link active" onclick="location.href='@Url.Action("ManageRequest", "Home",new {activeTab = 3})'">Finalizado</a>
-                            </li>
-                        }
+                        <li class="nav-item bgTabs">
+                            <a class="nav-link active" onclick="location.href='@Url.Action("ManageRequest", "Home",new {activeTab = 1})'">Pendientes</a>
+                        </li>
+                        <li class="nav-item bgTabs">
+                            <a class="nav-link " onclick="location.href='@Url.Action("ManageRequest", "Home",new {activeTab = 2})'">En Progreso</a>
+                        </li>
+                        <li class="nav-item bgTabs">
+                            <a class="nav-link" onclick="location.href='@Url.Action("ManageRequest", "Home",new {activeTab = 3})'">Finalizado</a>
+                        </li>
                     </ul>
-                </div>
-                <div class="row m-0 thirdBg d-flex justify-content-evenly">
-                    @foreach (Request request in ViewBag.Requests)
-                    {
-                        var base64 = Convert.ToBase64String(request.RequestPicture);
-                        var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
-                        <div class="card reqCard fourthBg text-white col-lg-3 col-md-5 col-sm-10 m-2 p-0" onclick="location.href='@Url.Action("ManageRequest2", "Home", new { RequestID = @request.RequestID})'">
-                            <img src="@imgSrc" class="card-img-top" alt="..." style="width: auto; height:250px; object-fit: cover;">
-                            <div class="card-body">
-                                <h5 class="font-title card-title secColor fs-5">@request.RequestTitle</h5>
-                                <p class="card-text secColor fw-bold">Ubicacion: <span class="text-white fw-normal">@request.Location_Request.City</span></p>
-                                <p class="card-text fw-bold secColor">Heroes solicitados: <span class="fw-normal text-white">@request.MembersNeeded</span></p>
+                    <div class="row m-0 thirdBg d-flex justify-content-evenly">
+                        @foreach (Request request in ViewBag.Requests)
+                        {
+                            var base64 = Convert.ToBase64String(request.RequestPicture);
+                            var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+                            <div class="card reqCard fourthBg text-white col-lg-3 col-md-5 col-sm-10 m-2 p-0" onclick="location.href='@Url.Action("ManageRequest2", "Home", new { RequestID = @request.RequestID , activeTab = 1})'">
+                                <img src="@imgSrc" class="card-img-top" alt="..." style="width: auto; height:250px; object-fit: cover;">
+                                <div class="card-body">
+                                    <h5 class="font-title card-title secColor fs-5">@request.RequestTitle</h5>
+                                    <p class="card-text secColor fw-bold">Ubicacion: <span class="text-white fw-normal">@request.Location_Request.City</span></p>
+                                    <p class="card-text fw-bold secColor">Heroes solicitados: <span class="fw-normal text-white">@request.MembersNeeded</span></p>
+                                </div>
                             </div>
-                        </div>
-                    }
-                </div>
+                        }
+                    </div>
+                }
+                else if (ViewBag.active == 2)
+                {
+                    <ul class="nav nav-tabs p-0 border-0">
+                        <li class="nav-item bgTabs">
+                            <a class="nav-link" onclick="location.href='@Url.Action("ManageRequest", "Home",new {activeTab = 1})'">Pendientes</a>
+                        </li>
+                        <li class="nav-item bgTabs">
+                            <a class="nav-link active" onclick="location.href='@Url.Action("ManageRequest", "Home",new {activeTab = 2})'">En Progreso</a>
+                        </li>
+                        <li class="nav-item bgTabs">
+                            <a class="nav-link" onclick="location.href='@Url.Action("ManageRequest", "Home",new {activeTab = 3})'">Finalizado</a>
+                        </li>
+                    </ul>
+                    <div class="row m-0 thirdBg d-flex justify-content-evenly">
+                        @foreach (Request request in ViewBag.Requests)
+                        {
+                            var base64 = Convert.ToBase64String(request.RequestPicture);
+                            var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+                            <div class="card reqCard fourthBg text-white col-lg-3 col-md-5 col-sm-10 m-2 p-0" onclick="location.href='@Url.Action("ManageRequest2", "Home", new { RequestID = @request.RequestID , activeTab = 2})'">
+                                <img src="@imgSrc" class="card-img-top" alt="..." style="width: auto; height:250px; object-fit: cover;">
+                                <div class="card-body">
+                                    <h5 class="font-title card-title secColor fs-5">@request.RequestTitle</h5>
+                                    <p class="card-text secColor fw-bold">Ubicacion: <span class="text-white fw-normal">@request.Location_Request.City</span></p>
+                                    <p class="card-text fw-bold secColor">Heroes solicitados: <span class="fw-normal text-white">@request.MembersNeeded</span></p>
+                                </div>
+                            </div>
+                        }
+                    </div>
+
+                }
+                else if (ViewBag.active == 3)
+                {
+                    <ul class="nav nav-tabs p-0 border-0">
+                        <li class="nav-item bgTabs">
+                            <a class="nav-link" onclick="location.href='@Url.Action("ManageRequest", "Home",new {activeTab = 1})'">Pendientes</a>
+                        </li>
+                        <li class="nav-item bgTabs">
+                            <a class="nav-link" onclick="location.href='@Url.Action("ManageRequest", "Home",new {activeTab = 2})'">En Progreso</a>
+                        </li>
+                        <li class="nav-item bgTabs">
+                            <a class="nav-link active" onclick="location.href='@Url.Action("ManageRequest", "Home",new {activeTab = 3})'">Finalizado</a>
+                        </li>
+                    </ul>
+                    <div class="row m-0 thirdBg d-flex justify-content-evenly">
+                        @foreach (Request request in ViewBag.Requests)
+                        {
+                            var base64 = Convert.ToBase64String(request.RequestPicture);
+                            var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
+                            <div class="card reqCard fourthBg text-white col-lg-3 col-md-5 col-sm-10 m-2 p-0" onclick="location.href='@Url.Action("ManageRequest2", "Home", new { RequestID = @request.RequestID , activeTab = 3})'">
+                                <img src="@imgSrc" class="card-img-top" alt="..." style="width: auto; height:250px; object-fit: cover;">
+                                <div class="card-body">
+                                    <h5 class="font-title card-title secColor fs-5">@request.RequestTitle</h5>
+                                    <p class="card-text secColor fw-bold">Ubicacion: <span class="text-white fw-normal">@request.Location_Request.City</span></p>
+                                    <p class="card-text fw-bold secColor">Heroes solicitados: <span class="fw-normal text-white">@request.MembersNeeded</span></p>
+                                </div>
+                            </div>
+                        }
+
+                    </div>
+                }
             </div>
         </div>
     </section>
