--- a/HomeHero/Views/Users/Details.cshtml
+++ b/HomeHero/Views/Users/Details.cshtml
@@ -12,7 +12,7 @@
 @section inicioLI{
     @if (User.IsInRole("Admon"))
     {
-        <li class="nav-item logIn ">
+        <li class="nav-item admin ">
             <a class="nav-link " asp-area="" asp-controller="Users" asp-action="">AdminSecret</a>
         </li>
         <li class="nav-item logIn ">
@@ -66,9 +66,23 @@
                 <dt class="col-sm-2">
                     @Html.DisplayNameFor(model => model.ProfilePicture)
                 </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.ProfilePicture)
-                </dd>
+                @if (Model.ProfilePicture != null && Model.ProfilePicture.Length > 0)
+                {
+                    var base64 = Convert.ToBase64String(Model.ProfilePicture);
+                    var imgSrc = String.Format("data:image/png;base64,{0}", base64);
+                    <dd class="col-sm-10">
+                        <img src="@imgSrc" width="100" />
+
+                    </dd>
+
+                }
+                else
+                {
+                    <dd class="col-sm-10">
+                        @Html.DisplayFor(modelItem => Model.ProfilePicture)
+                    </dd>
+                }
+
                 <dt class="col-sm-2">
                     @Html.DisplayNameFor(model => model.VolunteerVoucher)
                 </dt>
@@ -101,11 +115,11 @@
                     @Html.DisplayFor(model => model.SexUser)
                 </dd>
                 @*<dt class="col-sm-2">
-                    @Html.DisplayNameFor(model => model.Curriculum)
-                </dt>
-                <dd class="col-sm-10">
-                    @Html.DisplayFor(model => model.Curriculum)
-                </dd>*@
+            @Html.DisplayNameFor(model => model.Curriculum)
+            </dt>
+            <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Curriculum)
+            </dd>*@
                 <dt class="col-sm-2">
                     @Html.DisplayNameFor(model => model.VolunteerPermises)
                 </dt>
