--- a/HomeHero/wwwroot/css/General.css
+++ b/HomeHero/wwwroot/css/General.css
@@ -44,7 +44,14 @@
 
 .signUp {
     background: #387ccf;
-    margin-right: 1em;
+    margin-right: 2em;
+    height: 100%;
+}
+
+.admin {
+    background: #2c0a8e;
+    margin-right: 2em;
+    height: 100%;
 }
 
 .menuColor {
@@ -268,3 +275,4 @@ input:checked ~ form{
         height: max-content;
     }
 }
+
